# AutomaticControl

./: CMakeLists.txt
include/: screenCapture.hpp
src/: main.cpp  screenCapture.cpp
